[gd_scene load_steps=5 format=2]

[ext_resource path="res://particle.gd" type="Script" id=1]
[ext_resource path="res://Light_sprite.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]
resource_local_to_scene = true
radius = 25.0

[sub_resource type="CircleShape2D" id=2]
resource_local_to_scene = true
radius = 60.0

[node name="new_particle" type="Area2D"]
scale = Vector2( 0.3, 0.3 )
collision_layer = 4
input_pickable = false
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 2 )

[node name="force_range" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 4
input_pickable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="force_range"]
shape = SubResource( 2 )

[connection signal="body_shape_entered" from="." to="." method="_on_new_particle_body_shape_entered"]
[connection signal="body_shape_exited" from="." to="." method="_on_new_particle_body_shape_exited"]
[connection signal="area_entered" from="force_range" to="." method="_on_force_range_area_entered"]
[connection signal="area_exited" from="force_range" to="." method="_on_force_range_area_exited"]
